tests/programs/symex/a5-test-cases/pass/symex_call_pass.rice
// symex
fn id(x: int) -> int {
  x
}

#[symex]
fn example(x: int) {
  assert(id(x) == x)
}

