tests/programs/symex/a5-test-cases/fail/symex_simple_fail.rice
// symex
#[symex]
fn example(x: int) {
  assert(x == 0)
}